bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:6: error: value ** is not a member of Integer
    return (a**2*2)
             ^